LPS-51069 resolve z-index problem with carousel and modals

--- a/portal-web/docroot/html/themes/_styled/css/application.css
+++ b/portal-web/docroot/html/themes/_styled/css/application.css
@@ -477,6 +477,8 @@
 
 .modal-open .modal {
 	overflow: hidden;
+
+	position: relative;
 }
 
 /* ---------- Loading mask ---------- */
